--- a/app/src/main/res/layout/covid_test_acrivity.xml
+++ b/app/src/main/res/layout/covid_test_acrivity.xml
@@ -6,38 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".COVIDTestAcrivity">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center|center_vertical"
+        android:text="@string/app_name"
+        android:textColor="@color/main"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="32dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="140dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_human_covid"
+            android:layout_gravity="center"
+            />
 
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Пройдите тест на самочувствие"
             android:textColor="@color/main"
-            android:textSize="20sp"
-            android:text="Пройдите тест на самочувствие"/>
+            android:textSize="28sp" />
+
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text=""/>
+            android:text="@string/description"
+            android:textSize="20sp" />
 
         <Button
+            android:id="@+id/next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@drawable/button"
             android:text="Начать тест"
             android:textColor="@color/light"
-            android:background="@drawable/button" />
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
 
     </LinearLayout>
